style sheet and contact send button is added

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,9 @@
                         <input type="text" placeholder="name">
                         <input type="email" placeholder="email">
                         <textarea name="text" id="textarea" cols="30" rows="10" placeholder="message"></textarea>
+                        <button type="submit" class="btn send">
+                            SEND
+                        </button>
                     </div>
                 </div>
             </div>
