--- a/product_detail.html
+++ b/product_detail.html
@@ -71,7 +71,7 @@
                     <option>Medium</option>
                     <option>Small</option>
                     <input type="number" value="1">
-                    <a href="" class="btn">Add to Cart</a>
+                    <a href="cart.html" class="btn">Add to Cart</a>
                     <h3>Product Details 
                         <i class="fa fa-indent"></i></h3>
                         <br>
